Fixed the footer issues and 404 alignment.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+.body {
+  flex-grow: 2;
+}
+
 @media screen and (max-width: 1023.5px) {
   aside.toc.sidebar {
     display: none;
